# 3D-Scene-Understanding

./: .gitignore  main.py
DepthAnything/: DepthAnythingV2.py
ObjectDetection/: FuseSamYolo.py  ObjectTracking3D.py  runFastSam.py  segmentation.py  yolo_open_vocab.py
SLAM/: slam_wrapper.py  webcam.yaml
SLAM/ORB-SLAM3-python/: CMakeLists.txt  setup.py
SLAM/ORB-SLAM3-python/include/: ORBSLAM3Wrapper.h
SLAM/ORB-SLAM3-python/src/: ORBSLAM3Wrapper.cpp
processes/: camera.py  controller_process.py  detection_process.py  slam_process.py
utils/: calibrate_camera.py
